# mytconverter

./: .gitattributes  .gitignore  README.md  class_diagram.md  docker-compose.yml  package.json  sketch.md
frontend/: package.json  tsconfig.json  vitest.config.mts
frontend/src/: global.css  middleware.ts  theme.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: CustomAlert.tsx  CustomModal.tsx  GenericButton.tsx  GenericCheckbox.tsx  IdentifierTitle.tsx  SessionIdentifier.tsx  ThemeRegistry.tsx
frontend/src/hooks/: useConversionGroups.ts  useConversions.ts  useConvertions.ts  useDownloads.ts  useLoginForm.ts  useMyConversionsFeatures.ts  useMyConvertionsFeatures.ts  usePasswordReset.ts  usePasswordResetRequest.ts  usePasswordValidation.ts  useProfileEdit.ts  useRegisterForm.ts  useSessionIdentifier.ts  useUsers.ts
frontend/src/providers/: fetchApi.ts
frontend/src/services/: Auth.service.ts  Conversions.service.ts  Convertion.service.ts  Convertions.service.ts  PasswordReset.service.ts  UserSession.service.ts  Users.service.ts
frontend/src/types/: Conversion.ts  ConversionDTO.ts  ConversionType.ts  Convertion.ts  (+6 more)
java_backend/: Dockerfile  pom.xml  start-service.sh
java_backend/libs/: pom.xml
java_backend/microservices/: pom.xml
node_backend/: Dockerfile
node_backend/api_gateway/: .env.dist  .env.test  package.json  tsconfig.json
python_backend/: Dockerfile
python_backend/app/: auth.py  crud.py  database.py  main.py  models.py
python_backend/converter/: pyproject.toml
python_backend/converter/app/: Auth.py  main.py
(+203 files in other folders)
